--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
+              id="modalForm"
             >
               <div
                 class="formData">
@@ -72,6 +72,7 @@
                   name="first"
                   minlength="2"
                 /><br>
+                <span class="errorFirstName"></span>
               </div>
               <div
                 class="formData">
